@@ -1,3 +1,13 @@
+2008-04-28  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Sam, Mark, Adele and Darin.
+
+        Initialize the application cache path.
+        
+        * WebView/WebView.mm:
+        (WebKitInitializeApplicationCachePathIfNecessary):
+        (-[WebView _commonInitializationWithFrameName:groupName:]):
+
 2008-04-28  Alice Liu  <alice.liu@apple.com>
 
         Reviewed by Darin.
